--- a/src/index.scss
+++ b/src/index.scss
@@ -16,15 +16,34 @@
   box-sizing: border-box;
 }
 
+* {
+  margin: 0;
+}
+
 html,
-body {
+body,
+#root {
   width: 100%;
   height: 100%;
 }
 
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
 #root {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  place-items: center center;
+  isolation: isolate;
 }
